force-app/main/default/objects/ms_Deal_Eligibility_Criteria__c/ms_Deal_Eligibility_Criteria__c.object-meta.xml
<CustomObject>
    <label>Deal Eligibility Criteria</label>
    <nameField>
        <label>Deal Eligibility Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals Eligibility Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>