force-app/main/default/objects/ms_Deal_Eligibility_Criteria__c/fields/ms_Book_By_Number__c.field-meta.xml
<CustomField>
    <fullName>ms_Book_By_Number__c</fullName>
    <label>Book By Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>