force-app/main/default/objects/ms_Deal_Eligibility_Criteria__c/fields/ms_Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>ms_Deal_Status__c</fullName>
    <label>Deal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>