force-app/main/default/objects/ms_Deal_Eligibility_Criteria__c/fields/ms_Margin__c.field-meta.xml
<CustomField>
    <fullName>ms_Margin__c</fullName>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>